welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:26: error: ';' expected but 'def' found.
} def fairemotif() {
  ^PictureMono2:41: error: Unmatched closing brace '}' ignored here
}
^